adding new ideas to the project

--- a/TestNotebook.ipynb
+++ b/TestNotebook.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "65e0ca4f-790f-4427-8fb5-e868ffdf609e",
+   "metadata": {},
+   "source": [
+    "# Something"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f94afe8-50fc-42e7-bc96-4bddcd512fae",
+   "id": "32572a1a-575e-4b75-979c-7fce5ab856a0",
    "metadata": {},
    "outputs": [],
    "source": []
