--- a/TestNotebook.ipynb
+++ b/TestNotebook.ipynb
@@ -10,11 +10,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "32572a1a-575e-4b75-979c-7fce5ab856a0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "- imports\n",
+    "\n",
+    "- grab data\n",
+    " setup APIs\n",
+    "\n",
+    "- use Pandas\n",
+    "\n",
+    "-Monte carlo simulation\n",
+    "\n",
+    "- Charts\n",
+    "\n",
+    "- dashboards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abcdae41-1391-475a-960c-4fa959cdc8ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Vlad's notes:\n",
+    "Setup data\n",
+    "Fetch data\n",
+    "Monte carlo simulation\n",
+    "volume during halving events\n",
+    "correlation between cryptos and gold\n",
+    "what did gold do halving events\n",
+    "what did cryptos do during gold breakout\n",
+    "show the correlation value between btc and eth. Is it a strong correlation?\n",
+    "did cryptos really take away market strength from gold based on gold historical movements\n",
+    "compare & plot  moving averages since btc and eth inception\n",
+    "Are cryptos"
+   ]
   }
  ],
  "metadata": {
