--- a/TestNotebook.ipynb
+++ b/TestNotebook.ipynb
@@ -31,10 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "abcdae41-1391-475a-960c-4fa959cdc8ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-2-1cd177c70afb>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-1cd177c70afb>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Vlad's notes:\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "Vlad's notes:\n",
     "Setup data\n",
@@ -49,6 +58,14 @@
     "compare & plot  moving averages since btc and eth inception\n",
     "Are cryptos"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41cca522-d873-4312-83af-9f461c248d59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
