Added Markdown text describing step-by-step analysis

--- a/Project 1 Template -Data Cleanup and Analysis.ipynb
+++ b/Project 1 Template -Data Cleanup and Analysis.ipynb
@@ -484,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculate and Plot Beta for a chosen portfolio and the DXY"
+    "### Calculate and Plot Beta for a chosen chosen asset compared to DXY"
    ]
   },
   {
